--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Site</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/128/942/942748.png" type="image/x-icon">
   </head>
   <body>
     <section id="banner">
