--- a/Todo_app/index.html
+++ b/Todo_app/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Todo App</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/128/1950/1950715.png" type="image/x-icon">
   </head>
   <body>
     <div id="container">
@@ -15,5 +16,6 @@
       </div>
       <ul id="list"></ul>
     </div>
+    <script src="./script.js"></script>
   </body>
 </html>
